New schema (#820)
This reverts commit f78c54599042add2d3d84187e5e6825fec976846.